--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <build>
         <finalName>topjava</finalName>
-        <defaultGoal>install</defaultGoal>
+        <defaultGoal>package</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -34,6 +34,7 @@
     </build>
 
     <dependencies>
+
         <!--Web-->
         <dependency>
             <groupId>javax.servlet</groupId>
